Se configura el tomcat7-maven-plugin para su uso en modo debug