@@ -72,6 +72,15 @@
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
+					<configuration>
+						<path>/${project.build.finalName}</path>
+						<port>8080</port>
+						<contextReloadable>true</contextReloadable>
+						<systemProperties>
+							<JAVA_OPTS>-Xms256m -Xmx1024m -XX:+DisableExplicitGC -Dcom.sun.management.jmxremote -XX:PermSize=256m -XX:MaxPermSize=512m</JAVA_OPTS>
+							<MAVEN_OPTS>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</MAVEN_OPTS>
+						</systemProperties>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
